# llm_based_stockreport

./: README.md  app.py  main.py  pyproject.toml  report_cache.db  requirements.txt
src/: report_schema.py  reporting_service.py  tools_stock.py
